not access to accessDB.php

--- a/.htaccess
+++ b/.htaccess
@@ -21,3 +21,6 @@ RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 <Files "historique.php">
     Deny from all
 </Files>
+<Files "accessDB.php">
+    Deny from all
+</Files>
